# 9bikes

./: .gitignore  README.md  pyproject.toml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: alert_system_architecture_corrected.md  alert_system_implementation.md  code_style_conventions.md  codebase_structure.md  database_infrastructure.md  monitor_execution_implementation.md  project_purpose.md  project_status.md  serena_reference_note.md  session_handoff_alert_system.md  suggested_commands.md  task_completion_workflow.md  tech_stack.md
docs/: ALERT_SYSTEM.md  ARCHITECTURE_SEPARATION.md  PACKAGE_ARCHITECTURE.md
infrastructure/: README.md  requirements.txt
infrastructure/alert-engine/: __init__.py  engine.py  notification_manager.py
infrastructure/docker/: alert-engine-health.py  alert-engine.Dockerfile
infrastructure/k8s/: alert-engine-deployment.yaml
infrastructure/scripts/: build_alert_engine.sh  start_alert_engine.py
src/monitors_mcp/: __init__.py  cli.py  data_manager.py  deployment.py  models.py
src/monitors_mcp/auth/: __init__.py  auth_manager.py
src/monitors_mcp/containers/: base_monitor.py
src/monitors_mcp/database/: __init__.py
src/monitors_mcp/mcp_server/: __init__.py
src/monitors_mcp/monitors/: __init__.py  capabilities.py  template_engine.py
